tests/models/enum/named/u32/pass/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(gt = 2)]
        value: u32
    },
}
fn main() {}
